-Displaying of articles on main page

--- a/Sample App/View/Base.lproj/Main.storyboard
+++ b/Sample App/View/Base.lproj/Main.storyboard
@@ -32,23 +32,23 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="jDR-c3-z7I">
                                                     <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="85.666666666666671"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tiS-zH-CRx">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tiS-zH-CRx">
                                                             <rect key="frame" x="8" y="8.0000000000000018" width="346.66666666666669" height="19.666666666666671"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrg-gl-xT6">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrg-gl-xT6">
                                                             <rect key="frame" x="8" y="35.666666666666664" width="346.66666666666669" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mdz-lr-0s8">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="mdz-lr-0s8">
                                                             <rect key="frame" x="8" y="60.666666666666657" width="346.66666666666669" height="17"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1r-f7-jY3">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="311.33333333333331" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="303.33333333333331" height="17"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
@@ -73,6 +73,10 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="lblAbstract" destination="Vrg-gl-xT6" id="ReI-Oh-flz"/>
+                                            <outlet property="lblPublishDate" destination="Mqb-hG-eRi" id="7ML-SW-NLl"/>
+                                            <outlet property="lblSection" destination="y1r-f7-jY3" id="oKW-VF-0xF"/>
+                                            <outlet property="lblTitle" destination="tiS-zH-CRx" id="PkP-Yu-DL6"/>
                                             <segue destination="kVC-Ay-tXO" kind="show" id="fiX-fX-GJD"/>
                                         </connections>
                                     </tableViewCell>
